# jog-wheel-controller

./: Cargo.toml  build.sh  setup.sh
.circleci/: config.yml
firmware/: Cargo.toml
firmware/src/: main.rs  main_old.rs  multiplier.rs  pendant.rs
hal-comp/: Cargo.toml  axis_mm.ini  jog-pendant.hal  position_mm.txt
hal-comp/src/: lib.rs  main.rs
linuxcnc-hal-sys/: Cargo.toml  README.md  build.rs
src/: axis.rs  estop.rs  main.rs
