[package]
name = "linuxcnc-hal-sys"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
documentation = "https://docs.rs/linuxcnc-hal-sys"
description = "Generated, unsafe Rust bindings to the LinuxCNC HAL submodule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
